--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "ifdo-parser"
     ],
     "homepage": "https://github.com/biigle/ifdo-parser",
-    "license": "The Unlicense",
+    "license": "GPL-3.0",
     "type": "library",
     "authors": [
         {
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^7.4|^8.0",
+        "justinrainbow/json-schema": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0"
